Blockchain/production/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: udemy-hyperledger
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    ingress.kubernetes.io/aws-load-balancer-ssl-ports: "https"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      server {
        listen 80 default_server;
        listen [::]:80 default_server;
        server_name _;
        return 301 https://$host$request_uri;
      }
spec:
  rules:
    - host: ac5fa17ad445843dc9cdeb0c97fc3eef-129211992.us-west-2.elb.amazonaws.com
      http:
        paths:
          - path: /
            backend:
              serviceName: api-service
              servicePort: 4000
